<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/ActivityLayout"
    tools:context="com.example.android.musicalappstructure.MainActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/ScrollViewMain"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                style="@style/ExplanationLayout"
                android:id="@+id/ExplanationBar">

                <LinearLayout
                    style="@style/ExplanationIconLayout">

                    <ImageView
                        style="@style/ExplanationIcon"
                        android:id="@+id/explain_icon"
                        android:src="@drawable/arrow_side"
                        android:onClick="changeArrow" />


                </LinearLayout>

                <TextView
                    style="@style/ExplanationText"
                    android:text="@string/explanation_title"
                    android:id="@+id/explanation_text"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/categories_upper"
                style="@style/MainActivityCategoryLayout"
                android:layout_below="@id/ExplanationBar">

                <LinearLayout
                    style="@style/CategoryBig">

                    <LinearLayout
                        android:id="@+id/album_category"
                        style="@style/MainActivityCategoryBig">

                        <ImageView
                            style="@style/MainActivityCategoryIcon"
                            android:src="@drawable/playlist" />

                    </LinearLayout>

                    <TextView
                        style="@style/CategoryName"
                        android:text="@string/category_name_one" />

                </LinearLayout>

                <LinearLayout
                    style="@style/CategoryBig">

                    <LinearLayout
                        android:id="@+id/artist_category"
                        style="@style/MainActivityCategoryBig">

                        <ImageView
                            style="@style/MainActivityCategoryIcon"
                            android:src="@drawable/artist" />

                    </LinearLayout>

                    <TextView
                        style="@style/CategoryName"
                        android:text="@string/category_name_two"/>

                 </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/categories_below"
                style="@style/MainActivityCategoryLayout"
                android:layout_below="@id/categories_upper"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    style="@style/CategoryBig">

                    <LinearLayout
                        android:id="@+id/playlist_category"
                        style="@style/MainActivityCategoryBig">

                        <ImageView
                            style="@style/MainActivityCategoryIcon"
                            android:src="@drawable/playlist_new" />

                    </LinearLayout>

                    <TextView
                        style="@style/CategoryName"
                        android:text="@string/category_name_three" />

                </LinearLayout>

                <LinearLayout
                    style="@style/CategoryBig">

                    <LinearLayout
                        android:id="@+id/browse_category"
                        style="@style/MainActivityCategoryBig">

                        <ImageView
                            style="@style/MainActivityCategoryIcon"
                            android:src="@drawable/browse_dark" />

                    </LinearLayout>

                    <TextView
                        style="@style/CategoryName"
                        android:text="@string/category_name_four" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/payment"
                style="@style/MainActivityCategorySmall"
                android:layout_below="@id/categories_below"
                android:background="@color/textColor">

                <LinearLayout style="@style/BarTextLayout">

                    <TextView
                        style="@style/DetailText"
                        android:text="@string/buy" />

                    <TextView
                        style="@style/DetailTextBold"
                        android:text="@string/buy_bold" />

                </LinearLayout>

                <ImageView
                    style="@style/ListImage"
                    android:src="@drawable/buy" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        style="@style/NowPlayingBar"
        android:layout_marginTop="10dp">

        <LinearLayout
            style="@style/ListImageLayout">

            <ImageView
                style="@style/ListImage"
                android:id="@+id/now_playing"
                android:src="@drawable/play_dark"
                android:onClick="changeIcon"/>

        </LinearLayout>

        <LinearLayout
            style="@style/BarTextLayout"
            android:id="@+id/now_playing_bar">

            <TextView
                style="@style/DetailTextBold"
                android:text="@string/title_name"/>

            <TextView
                style="@style/DetailText"
                android:text="@string/artist_name"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
