<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_now_playing"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicalappstructure.NowPlayingActivity">

    <LinearLayout
        style="@style/ExplanationLayout">

        <LinearLayout
            style="@style/ExplanationIconLayout">

            <ImageView
                style="@style/ExplanationIcon"
                android:id="@+id/explain_icon"
                android:src="@drawable/arrow_side"
                android:onClick="changeArrow" />


        </LinearLayout>

        <TextView
            style="@style/ExplanationText"
            android:text="@string/explanation_title"
            android:id="@+id/explanation_text"/>

    </LinearLayout>

    <LinearLayout
        style="@style/NowPlayingIconLayout">

        <ImageView
            style="@style/ListImageIcon"
            android:src="@drawable/song"/>
    </LinearLayout>

    <LinearLayout
        style="@style/DetailTextLayout"
        android:layout_gravity="center"
        >

        <TextView
            style="@style/ListTitleTextBold"
            android:text="@string/song_title"/>

        <TextView
            style="@style/ListTitleText"
            android:text="@string/artist_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Playtime"
            android:text="@string/song_start" />

        <SeekBar
            style="@style/SeekBar"
            android:id="@+id/seekBar" />

        <TextView
            style="@style/Playtime"
            android:text="@string/song_end" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <ImageView
            style="@style/IconsSmall"
            android:src="@drawable/previous"/>

        <ImageView
            style="@style/IconsSmall"
            android:src="@drawable/rewind"/>

        <ImageView
            style="@style/IconsLarge"
            android:id="@+id/now_playing"
            android:src="@drawable/play"
            android:onClick="changeIcon"/>

        <ImageView
            style="@style/IconsSmall"
            android:src="@drawable/forward"/>

        <ImageView
            style="@style/IconsSmall"
            android:src="@drawable/skip"/>

    </LinearLayout>

</LinearLayout>
