<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_browse"
    style="@style/ActivityLayout"
    tools:context="com.example.android.musicalappstructure.BrowseActivity">

    <LinearLayout
         android:id="@+id/browse_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/magnifier"/>

         <EditText
            style="@style/EditTextStyle"
            android:id="@+id/browse"
            android:hint="Browse through your music" />

     </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/ScrollView"
        android:layout_below="@id/browse_edit">

        <LinearLayout
            style="@style/ScrollViewLayout">

            <LinearLayout
                style="@style/ExplanationLayout">

                <LinearLayout
                    style="@style/ExplanationIconLayout">

                    <ImageView
                        style="@style/ExplanationIcon"
                        android:id="@+id/explain_icon"
                        android:src="@drawable/arrow_side"
                        android:onClick="changeArrow" />


                </LinearLayout>

                <TextView
                    style="@style/ExplanationText"
                    android:text="@string/explanation_title"
                    android:id="@+id/explanation_text"/>

            </LinearLayout>

            <LinearLayout
                style="@style/List">

                <LinearLayout
                    style="@style/ListImageLayout">

                    <ImageView
                        style="@style/ListImage"
                        android:src="@drawable/song"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/BarTextLayout"
                    android:id="@+id/song_example">

                    <TextView
                        style="@style/DetailTextBold"
                        android:text="@string/song_title"/>

                    <TextView
                        style="@style/DetailText"
                        android:text="@string/artist_name"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/ListImageLayout">

                    <ImageView
                        style="@style/ListImage"
                        android:src="@drawable/play_dark"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/Seperator">
            </LinearLayout>

            <LinearLayout
                style="@style/List">

                <LinearLayout
                    style="@style/ListImageLayout">

                    <ImageView
                        style="@style/ListImage"
                        android:src="@drawable/playlist_new"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/BarTextLayout"
                    android:id="@+id/playlist_example">

                    <TextView
                        style="@style/DetailTextBold"
                        android:text="@string/playlist_name"/>

                    <TextView
                        style="@style/DetailText"
                        android:text="@string/number_of_songs"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/ListImageLayout">

                    <ImageView
                        style="@style/ListImage"
                        android:src="@drawable/play_dark"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/Seperator">
            </LinearLayout>

            <LinearLayout
                style="@style/List">

                <LinearLayout
                    style="@style/ListImageLayout">

                    <ImageView
                        style="@style/ListImage"
                        android:src="@drawable/artist"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/BarTextLayout">

                    <TextView
                        style="@style/DetailTextBold"
                        android:text="@string/artist_name"/>

                    <TextView
                        style="@style/DetailText"
                        android:text="@string/number_of_songs"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/ListImageLayout">

                    <ImageView
                        style="@style/ListImage"
                        android:src="@drawable/play_dark"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/Seperator">
            </LinearLayout>

            <LinearLayout
                style="@style/List">

                <LinearLayout
                    style="@style/ListImageLayout">

                    <ImageView
                        style="@style/ListImage"
                        android:src="@drawable/song"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/BarTextLayout">

                    <TextView
                        style="@style/DetailTextBold"
                        android:text="@string/song_title"/>

                    <TextView
                        style="@style/DetailText"
                        android:text="@string/artist_name"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/ListImageLayout">

                    <ImageView
                        style="@style/ListImage"
                        android:src="@drawable/play_dark"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/Seperator">
            </LinearLayout>

            <LinearLayout
                style="@style/List">

                <LinearLayout
                    style="@style/ListImageLayout">

                    <LinearLayout
                        style="@style/ListImageLayout">

                        <ImageView
                            style="@style/ListImage"
                            android:src="@drawable/playlist"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                style="@style/BarTextLayout">

                <TextView
                    style="@style/DetailTextBold"
                    android:text="@string/album_title"/>

                <TextView
                    style="@style/DetailText"
                    android:text="@string/artist_name"/>

            </LinearLayout>

                <LinearLayout
                    style="@style/ListImageLayout">

                    <ImageView
                        style="@style/ListImage"
                        android:src="@drawable/play_dark"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/Seperator">
            </LinearLayout>

            <LinearLayout
                style="@style/List">

                <LinearLayout
                    style="@style/ListImageLayout">

                    <ImageView
                        style="@style/ListImage"
                        android:src="@drawable/artist"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/BarTextLayout">

                    <TextView
                        style="@style/DetailTextBold"
                        android:text="@string/artist_name"/>

                    <TextView
                        style="@style/DetailText"
                        android:text="@string/number_of_songs"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/ListImageLayout">

                    <ImageView
                        style="@style/ListImage"
                        android:src="@drawable/play_dark"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        style="@style/SeperatorLarge">
    </LinearLayout>

    <LinearLayout
        style="@style/NowPlayingBar"
        android:id="@+id/now_playing_bar">

        <LinearLayout
            style="@style/ListImageLayout">

            <ImageView
                style="@style/ListImage"
                android:id="@+id/now_playing"
                android:src="@drawable/play_dark"
                android:onClick="changeIcon"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/now_playing_bar_details"
            style="@style/BarTextLayout">

            <TextView
                style="@style/DetailTextBold"
                android:text="@string/title_name"/>

            <TextView
                style="@style/DetailText"
                android:text="@string/artist_name"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
